<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailedView"
    style="@style/detailScrollViewStyle">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/detailMainConstriantViewStyle">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_backdrop_picture"
            style="@style/detailBackdropPictureCardView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/backdrop_picture"
                style="@style/detailBackdropImageStyle"
                tools:src="@drawable/wonder_woman_backdrop_image" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_info"
            style="@style/detailCardViewStyle"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_backdrop_picture">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/detailedCardViewInfoConstraintStyle">


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view_poster"
                    style="@style/detailsPosterimageCardViewStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/title">

                    <ImageView
                        android:id="@+id/poster_picture"
                        style="@style/detailedPosterpathImage"
                        tools:src="@drawable/wonder_woman_1984"

                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title"
                    style="@style/bigSectionStyle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/card_view_poster"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/titleTextPreview" />

                <TextView
                    android:id="@+id/tagline"
                    style="@style/taglineStyle"
                    android:alpha="0.8"

                    tools:text="@string/taglinetextPreview"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <TextView
                    android:id="@+id/section_genre"
                    style="@style/smallSectionStyle"
                    android:text="@string/genre"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toBottomOf="@id/tagline" />

                <TextView
                    android:id="@+id/genre"
                    style="@style/smallSectionDataStyle"
                    android:alpha="0.6"
                    app:layout_constraintStart_toStartOf="@id/section_genre"
                    app:layout_constraintTop_toBottomOf="@id/section_genre"
                    tools:text="Fantasy, Action, Adventure" />

                <TextView
                    android:id="@+id/section_release_date"
                    style="@style/smallSectionStyle"
                    android:text="@string/release_date"
                    app:layout_constraintStart_toStartOf="@id/genre"
                    app:layout_constraintTop_toBottomOf="@id/genre" />

                <TextView
                    android:id="@+id/movie_release_date"
                    style="@style/detaledViewReleaseDateStyle"
                    android:alpha="0.6"
                    app:layout_constraintStart_toStartOf="@id/section_release_date"
                    app:layout_constraintTop_toBottomOf="@id/section_release_date"
                    tools:text="2020-12-16" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/release_status"
            style="@style/releaseTagCardViewStyle"
            android:backgroundTint="@color/teal_800"
            app:layout_constraintBottom_toBottomOf="@id/card_view_backdrop_picture"
            app:layout_constraintStart_toStartOf="@id/card_view_backdrop_picture">

            <TextView
                android:id="@+id/status"
                style="@style/detailedTagTextStyle"
                android:alpha="0.8"
                tools:text="Released" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_rating"
            style="@style/ratingCardViewStyle"
            android:alpha="0.8"
            android:backgroundTint="@color/teal_800"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="@id/card_view_backdrop_picture"
            app:layout_constraintEnd_toEndOf="@id/card_view_backdrop_picture">

            <TextView
                android:id="@+id/rating_value"
                style="@style/ratingTextViewStyle"
                tools:text="9.1" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_overview"
            style="@style/overviewCardViewStyle"
            app:cardCornerRadius="14dp"
            app:layout_constraintTop_toBottomOf="@id/card_view_info"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/section_overview"
                    style="@style/mediumSectionStyle"
                    android:text="@string/overview_title" />

                <TextView
                    android:id="@+id/overview"
                    style="@style/overviewTextStyle"
                    android:alpha="0.6"
                    tools:text="@string/overview" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/section_production_companies"
            style="@style/productionTextViewStyle"
            android:text="@string/production_companies"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_view_overview" />

        <TextView
            android:id="@+id/companies"
            style="@style/companiesListTextStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_production_companies"
            tools:text="WB\nMarvel" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
